Unified: Workaround tray btn highlight resize bug

This CL workarounds a ui::Layer mask bug for UnifiedSystemTray.
ui::Layer mask does not update properly when a layer is resized.
I reached out to cc OWNERS but couldn't figure out the way to fix the
bug on cc:: or ui:: side. As the tray button highlight issue is easily
noticeable by users, we workaround the problem in ash for now.

Steps to repro:
1. Open UnifiedSystemTray
2. Click do-not-disturb button
3. System Tray button highlight does not resize
   (See the screenshot on the bug)

TEST=manual
BUG=854807,860367

Change-Id: Ic6dcefde8d0263e2e31953621b8c43f522696aba
Reviewed-on: https://chromium-review.googlesource.com/1193042
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586749}
Former-commit-id: d35da84fdaae2a3c745a4e0703573da403aa8df6